Templates : remove auto closing tags We are not using XHTML anymore but HTML 5

--- a/templates/base/components/dashlet/dashletbadge.html.twig
+++ b/templates/base/components/dashlet/dashletbadge.html.twig
@@ -3,7 +3,7 @@
 {% apply spaceless %}
     <div class="ibo-dashlet-badge--body">
         <div class="ibo-dashlet-badge--icon-container">
-            <img class="ibo-dashlet-badge--icon" src="{{ oUIBlock.GetClassIconUrl() }}"/>
+            <img class="ibo-dashlet-badge--icon" src="{{ oUIBlock.GetClassIconUrl() }}">
         </div>
         <div class="ibo-dashlet-badge--actions">
             <a class="ibo-dashlet-badge--action-list" href="{{ oUIBlock.GetHyperlink() }}">
