--- a/templates/base/components/panel/panelenhanced.html.twig
+++ b/templates/base/components/panel/panelenhanced.html.twig
@@ -4,7 +4,7 @@
 
 {% block iboPanelTitle %}
     <div class="ibo-panel--title-icon">
-        <img src="{{ oUIBlock.GetIconUrl() }}" alt="{{ oUIBlock.GetTitle() }}"/>
+        <img src="{{ oUIBlock.GetIconUrl() }}" alt="{{ oUIBlock.GetTitle() }}">
     </div>
     <div class="ibo-panel--title-title">
         <div class="ibo-panel--title-title-title">{{ oUIBlock.GetTitle() }}</div>
