--- a/templates/pages/login/base.html.twig
+++ b/templates/pages/login/base.html.twig
@@ -13,7 +13,7 @@
 		{% block login_logo %}
 			<div id="login-logo">
 				<a href="{{ sIconUrl }}">
-					<img title="{{ sVersionShort }}" src="{{ sDisplayIcon }}" alt="logo"/>
+					<img title="{{ sVersionShort }}" src="{{ sDisplayIcon }}" alt="logo">
 				</a>
 			</div>
 		{% endblock login_logo %}
