--- a/templates/pages/login/password/forgotpwdform.html.twig
+++ b/templates/pages/login/password/forgotpwdform.html.twig
@@ -18,17 +18,17 @@
 					<div id="login-input">
 						<div>
 							<label for="user">{{ 'UI:Login:UserNamePrompt'|dict_s }}:</label>
-							<input id="user" type="text" name="auth_user" value="{{ sAuthUser }}" />
+							<input id="user" type="text" name="auth_user" value="{{ sAuthUser }}">
 						</div>
 					</div>
 					<div id="login-submit" class="forgotpwd-submit">
 						<div>
-							<input type="submit" value="{{ 'UI:Login:ResetPassword'|dict_s }}" />
-							<input class="login-submit-secondary" type="button" onClick="window.close();" value="{{ 'UI:Button:Cancel'|dict_s }}" />
+							<input type="submit" value="{{ 'UI:Login:ResetPassword'|dict_s }}">
+							<input class="login-submit-secondary" type="button" onClick="window.close();" value="{{ 'UI:Button:Cancel'|dict_s }}">
 						</div>
 					</div>
 				</div>
-				<input type="hidden" name="loginop" value="forgot_pwd_go" />
+				<input type="hidden" name="loginop" value="forgot_pwd_go">
 			</form>
 		</div>
 	</div>
