--- a/templates/base/components/datatable/config/layout.html.twig
+++ b/templates/base/components/datatable/config/layout.html.twig
@@ -1,5 +1,5 @@
 <div id="datatable_dlg_{{ oUIBlock.GetTableId() }}" style="display: none; background : white;" class="{{ oUIBlock.GetBlockCode() }}">
-    <input type="hidden" name="action" value="none"/>
+    <input type="hidden" name="action" value="none">
     <form id="form_{{ oUIBlock.GetTableId() }}" onsubmit="return false">
         <p>
             <input id="dtbl_dlg_settings_{{ oUIBlock.GetTableId() }}" type="radio" name="settings" {% if (oUIBlock.GetOption("bUseCustomSettings") == false) %} checked {% endif %} value="defaults">
@@ -10,7 +10,7 @@
                 <input id="dtbl_dlg_specific_{{ oUIBlock.GetTableId() }}" type="radio" class="specific_settings" name="settings" {% if oUIBlock.GetOption("bUseCustomSettings") %} checked {% endif %} value="specific">
                 <label for="dtbl_dlg_specific_{{ oUIBlock.GetTableId() }}">&nbsp;&nbsp;{{ 'UI:UseSpecificSettings'|dict_s }}</label>
             </legend>
-            {{ 'UI:ColumnsAndSortOrder'|dict_s }}<br/>
+            {{ 'UI:ColumnsAndSortOrder'|dict_s }}<br>
             <ul class="sortable_field_list" id="sfl_{{ oUIBlock.GetTableId() }}">
 
             </ul>
