--- a/templates/pages/login/password/forgotpwdsent.html.twig
+++ b/templates/pages/login/password/forgotpwdsent.html.twig
@@ -10,7 +10,7 @@
 		<p>{{ 'UI:ResetPwd-EmailSent'|dict_s }}</p>
 	</div>
 	<div id="forgot_pwd_sent">
-		<input type="button" class="forgot_pwd_done" onClick="window.close();" value="{{ 'UI:Button:Done'|dict_s }}"/>
+		<input type="button" class="forgot_pwd_done" onClick="window.close();" value="{{ 'UI:Button:Done'|dict_s }}">
 	</div>
 </div>
 {% endblock %}
