--- a/templates/pages/login/password/resetpwdform.html.twig
+++ b/templates/pages/login/password/resetpwdform.html.twig
@@ -26,22 +26,22 @@
 							<div id="login-input">
 								<div>
 									<label for="new_pwd">{{ 'UI:Login:NewPasswordPrompt'|dict_s }}:</label>
-									<input type="password" id="new_pwd" name="new_pwd" value="" />
+									<input type="password" id="new_pwd" name="new_pwd" value="">
 								</div>
 								<div>
 									<label for="retype_new_pwd">{{ 'UI:Login:RetypeNewPasswordPrompt'|dict_s }}:</label>
-									<input type="password" id="retype_new_pwd" name="retype_new_pwd" value="" />
+									<input type="password" id="retype_new_pwd" name="retype_new_pwd" value="">
 								</div>
 							</div>
 							<div id="login-submit">
 								<div>
-									<input type="submit" onClick="return DoCheckPwd();" value="{{ 'UI:Button:ChangePassword'|dict_s }}" />
+									<input type="submit" onClick="return DoCheckPwd();" value="{{ 'UI:Button:ChangePassword'|dict_s }}">
 								</div>
 							</div>
 					</div>
-					<input type="hidden" name="loginop" value="do_reset_pwd" />
-					<input type="hidden" name="auth_user" value="{{ sAuthUser }}" />
-					<input type="hidden" name="token" value="{{ sToken }}" />
+					<input type="hidden" name="loginop" value="do_reset_pwd">
+					<input type="hidden" name="auth_user" value="{{ sAuthUser }}">
+					<input type="hidden" name="token" value="{{ sToken }}">
 				</form>
 			{% endif %}
 		</div>
