N°2737 - RenderBlockTemplate enhancement, uilinkswidget UIBlock refactor

--- a/templates/base/components/datatable/static/formtable/layout.js.twig
+++ b/templates/base/components/datatable/static/formtable/layout.js.twig
@@ -1,6 +1,8 @@
 $('#{{ oUIBlock.GetId() }}').DataTable({
     language: {
-        emptyTable: {{ 'UI:Message:EmptyList:UseAdd'|dict_s }}
+        emptyTable: "{{ 'UI:Message:EmptyList:UseAdd'|dict_s }}"
     },
-    search:false
+    paging: false,
+    filter: false,
+    search: false
 });
