N°3537 run_query : use Field instead of InputWithLabel

--- a/css/backoffice/components/_field.scss
+++ b/css/backoffice/components/_field.scss
@@ -22,7 +22,8 @@ $ibo-field--label--description--color: $ibo-color-grey-700 !default;
   display: inherit;
 
   .ibo-field--label {
-    display: inherit;
+	  display: inherit;
+	  max-width: none;
   }
 }
 
