--- a/templates/base/components/alert/layout.html.twig
+++ b/templates/base/components/alert/layout.html.twig
@@ -6,6 +6,6 @@
 				class="fas fa-caret-up"></i>
 	</div>
 	<div class="ibo-alert--action-button ibo-alert--close-button" data-role="ibo-alert--close-button"><i class="fas fa-times"></i></div>
-	<div class="ibo-alert--title">{{ oUIBlock.GetTitle() }}</div>
+	<div class="ibo-alert--title" data-role="ibo-alert--title">{{ oUIBlock.GetTitle() }}</div>
 	<div class="ibo-alert--body">{{ oUIBlock.GetContent()|raw }}</div>
 </div>
