--- a/templates/base/components/field/layout.html.twig
+++ b/templates/base/components/field/layout.html.twig
@@ -1,5 +1,6 @@
 {% set aParams = oUIBlock.GetParams() %}
 <div id="{{ oUIBlock.GetId() }}" class="ibo-field ibo-field-{{ aParams.layout }}"
+	data-role="ibo-field"
     data-attribute-code="{{ aParams.attcode }}"
     data-attribute-type="{{ aParams.atttype }}"
     data-attribute-label="{{ aParams.attlabel }}"
