N°2127 - Fix visual glitch when several large fields in the form

--- a/css/backoffice/utils/helpers/_misc.scss
+++ b/css/backoffice/utils/helpers/_misc.scss
@@ -46,6 +46,7 @@ body.ibo-has-fullscreen-descendant{
 	width: 100vw;
 	height: 100vh;
 	overflow: auto;
+	z-index: 9000;
 }
 
 %ibo-fully-centered-content{
