--- a/templates/base/components/datatable/static/formtable/layout.js.twig
+++ b/templates/base/components/datatable/static/formtable/layout.js.twig
@@ -4,5 +4,6 @@ $('#{{ oUIBlock.GetId() }}').DataTable({
     },
     paging: false,
     filter: false,
-    search: false
+    search: false,
+	dom: "t"
 });
