--- a/templates/base/layouts/page-content/with-side-content.html.twig
+++ b/templates/base/layouts/page-content/with-side-content.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base/layouts/page-content/layout.html.twig' %}
 
-{% block iboPageCenterContainerExtraClasses %}{{ parent() }} ibo-center-container--with-side-content{% endblock %}
+
+{% block iboPageCenterContainerExtraClasses %}{{ parent() }}{% if not aPage.isPrintable %} ibo-center-container--with-side-content{% endif %}{% endblock %}
 
 {% block iboPageCenterContainer %}
 	{{ parent() }}
