--- a/templates/base/layouts/activity-panel/layout.html.twig
+++ b/templates/base/layouts/activity-panel/layout.html.twig
@@ -15,12 +15,12 @@
 				</a>
 			</div>
 			<div class="ibo-activity-panel--size-toggler" data-role="ibo-activity-panel--size-toggler">
-				<a href="#" class="ibo-activity-panel--expand-icon"
+				<a href="#" class="ibo-activity-panel--expand-icon no-print-preview"
 				   data-role="ibo-activity-panel--expand-icon"
 				   data-tooltip-content="{{ 'UI:Layout:ActivityPanel:SizeToggler:Expand:Tooltip'|dict_s }}">
 					<span class="fas fa-fw fa-expand-alt"></span>
 				</a>
-				<a href="#" class="ibo-activity-panel--collapse-icon"
+				<a href="#" class="ibo-activity-panel--collapse-icon no-print-preview"
 				   data-role="ibo-activity-panel--collapse-icon"
 				   data-tooltip-content="{{ 'UI:Layout:ActivityPanel:SizeToggler:Collapse:Tooltip'|dict_s }}">
 					<span class="fas fa-fw fa-compress-alt"></span>
@@ -91,7 +91,7 @@
 	</div>
 	{% if oUIBlock.HasActivityTabEntryForm() %}
 		{%  if oUIBlock.GetActivityTabEntryForm().IsSubmitAutonomous() %}
-			<a href="#" class="ibo-activity-panel--body--add-caselog-entry--toggler" data-role="ibo-activity-panel--body--add-caselog-entry--toggler"><i class="fas fa-feather"></i></a>
+			<a href="#" class="ibo-activity-panel--body--add-caselog-entry--toggler no-print-preview" data-role="ibo-activity-panel--body--add-caselog-entry--toggler"><i class="fas fa-feather"></i></a>
 		{% endif %}
 	{% endif %}
 	<div class="ibo-activity-panel--body">
