--- a/css/print.css
+++ b/css/print.css
@@ -179,11 +179,8 @@ div.explain-printable {
 .printable-content .ibo-field--fullscreen-toggler,
 .printable-content .ibo-activity-panel--expand-icon,
 .printable-content .ibo-activity-panel--collapse-icon,
-.printable-content .ibo-activity-panel--body--add-caselog-entry--toggler{
-	display: none;
-}
-
-.itop_popup{
+.printable-content .ibo-activity-panel--body--add-caselog-entry--toggler,
+#ibo-top-container, #ibo-navigation-menu, .itop_popup {
 	display: none;
 }
 
