--- a/css/backoffice/components/_all.scss
+++ b/css/backoffice/components/_all.scss
@@ -7,6 +7,7 @@
 @import "badge";
 @import "button";
 @import "breadcrumbs";
+@import "collapsible-section";
 @import "quick-create";
 @import "global-search";
 @import "popover-menu/popover-menu";
