N°3518 - Start refactor of object details to match block / template design

--- a/templates/base/layouts/object/object-details/layout.html.twig
+++ b/templates/base/layouts/object/object-details/layout.html.twig
@@ -2,9 +2,21 @@
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% extends 'base/components/panel/layout.html.twig' %}
 
-{% block iboPanelHeader %}
-    <div class="ibo-panel--medallion">{% block iboPanelMedallion %}{% endblock %}</div>
-    {{ parent() }}
+{% block iboPanelMetaData %}
+    data-object-class="{{ oUIBlock.GetClassName() }}"
+    data-object-id="{{ oUIBlock.GetObjectId() }}"
+    data-object-mode="{{ oUIBlock.GetObjectMode() }}"
+{% endblock %}
+
+{% block iboPanelHeaderLeft %}
+    <div class="ibo-object-details--medallion">
+        {% block iboObjectDetailsMedallion %}
+        {% endblock %}
+    </div>
+    <div>
+        {{ parent() }}
+        <div class="ibo-object-details--status" data-role="ibo-object-details--status"></div>
+    </div>
 {% endblock %}
 
 {% block iboPanelTitle %}{{ oUIBlock.GetTitle() }}{% endblock %}
