--- a/templates/base/components/panel/layout.html.twig
+++ b/templates/base/components/panel/layout.html.twig
@@ -1,15 +1,23 @@
 {# @copyright   Copyright (C) 2010-2020 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% apply spaceless %}
-    <div id="{{ oUIBlock.GetId() }}" class="ibo-panel ibo-is-{{ oUIBlock.GetColor() }} {{ oUIBlock.GetCSSClasses() }}">
+    <div id="{{ oUIBlock.GetId() }}" class="ibo-panel ibo-is-{{ oUIBlock.GetColor() }} {{ oUIBlock.GetCSSClasses() }}" {% block iboPanelMetaData %}{% endblock %}>
         <div class="ibo-panel--header">
             {% block iboPanelHeader %}
-                <div class="ibo-panel--title">{% block iboPanelTitle %}{{ oUIBlock.GetTitle()|raw }}{% endblock %}</div>
-                <div class="ibo-panel--toolbar">
-                    {% block iboPanelToolbar %}
-                        {% for oToolbarBlock in oUIBlock.GetToolbarBlocks() %}
-                            {{ render_block(oToolbarBlock, {aPage: aPage}) }}
-                        {% endfor %}
+                <div class="ibo-panel--header-left">
+                    {% block iboPanelHeaderLeft %}
+                        <div class="ibo-panel--title">{% block iboPanelTitle %}{{ oUIBlock.GetTitle()|raw }}{% endblock %}</div>
+                    {% endblock %}
+                </div>
+                <div class="ibo-panel--header-right">
+                    {% block iboPanelHeaderRight %}
+                        <div class="ibo-panel--toolbar">
+                            {% block iboPanelToolbar %}
+                                {% for oToolbarBlock in oUIBlock.GetToolbarBlocks() %}
+                                    {{ render_block(oToolbarBlock, {aPage: aPage}) }}
+                                {% endfor %}
+                            {% endblock %}
+                        </div>
                     {% endblock %}
                 </div>
             {% endblock %}
