N°2844 - Fix object panel layout during a transition

--- a/css/backoffice/layout/_all.scss
+++ b/css/backoffice/layout/_all.scss
@@ -24,6 +24,7 @@
 @import "multi-column/multi-column";
 @import "multi-column/column";
 @import "dashboard/dashboard";
+@import "wizard-container/wizard-container";
 @import "object-details";
 @import "activity-panel/activity-panel";
 @import "activity-panel/activity-entry";
