--- a/css/backoffice/layout/_object-details.scss
+++ b/css/backoffice/layout/_object-details.scss
@@ -16,7 +16,7 @@
 	position: absolute;
 	margin-top: 16px;
 }
-.object-details .ibo-title .ibo-title--content {
+.object-details .ibo-title.ibo-has-icon .ibo-title--content {
 	margin-left: calc(90px + 32px);
 }
 .object-details .ibo-panel {
